1.改了跨域调用机制，mono层到hotfix层只在最开始start使用appdomain调用了一次，之后的所有从mono层到hotfix层全改成了action回调。这样性能将大大提升 2.事件机制现在完全抹平了差异，而且使用action回调实现hotfix层订阅mono层事件，性能大大提升

--- a/Unity/Hotfix/Unity.Hotfix.csproj
+++ b/Unity/Hotfix/Unity.Hotfix.csproj
@@ -54,7 +54,8 @@
     <Compile Include="Base\Helper\ArrayHelper.cs" />
     <Compile Include="Base\Helper\AssetBundleHelper.cs" />
     <Compile Include="Base\Helper\ExceptionHelper.cs" />
-    <Compile Include="Module\HotfixMessage\RecvHotfixMessageEvent_HandleHotfixMessage.cs" />
+    <Compile Include="Event\TestHotfixSubscribMonoEvent_LogString.cs" />
+    <Compile Include="Module\HotfixMessage\HotfixMessageDispatcher.cs" />
     <Compile Include="Module\HotfixMessage\IMessage.cs" />
     <Compile Include="Module\HotfixMessage\AMHandler.cs" />
     <Compile Include="Module\HotfixMessage\IMHandler.cs" />
@@ -91,7 +92,6 @@
     <Compile Include="UI\UILogin\Factory\UILoginFactory.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Event\" />
     <Folder Include="Handler\" />
   </ItemGroup>
   <ItemGroup>
